async versions with progress
